--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                     <p class="text-5xl font-extrabold text-white mb-6">R$ 135,00</p>
                     <p class="text-white opacity-90 mb-6">Capacidade: <span class="font-bold">350 ml</span></p>
                     <ul class="text-left text-white space-y-3">
-                        <li class="flex items-center"><svg class="w-5 h-5 mr-2 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg> <span class="font-bold">Controle Digital</span>  de Temperatura</li>
-                        <li class="flex items-center"><svg class="w-5 h-5 mr-2 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg> <span class="font-bold">Maior Autonomia</span>  de Bateria</li>
+                        <li class="flex items-center"><svg class="w-5 h-5 mr-2 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg> <span class="font-bold">Controle Digital</span>&nbsp;de Temperatura</li>
+                        <li class="flex items-center"><svg class="w-5 h-5 mr-2 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg> <span class="font-bold">Maior Autonomia</span>&nbsp;de Bateria</li>
                         <li class="flex items-center"><svg class="w-5 h-5 mr-2 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg> Design Premium e Compacto</li>
                     </ul>
                     <button onclick="showInfo('SmartBox Pro')" class="mt-8 w-full bg-white text-smart-blue py-3 rounded-xl font-semibold hover:bg-gray-100 transition duration-150 ease-in-out">
@@ -245,7 +245,7 @@
                     <p class="text-gray-500 mb-6">Capacidade: <span class="font-bold text-smart-text">1 Litro</span></p>
                     <ul class="text-left text-smart-text space-y-3">
                         <li class="flex items-center"><svg class="w-5 h-5 mr-2 text-smart-green" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg> Capacidade Familiar/Longa Jornada</li>
-                        <li class="flex items-center"><svg class="w-5 h-5 mr-2 text-smart-green" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg> <span class="font-bold">Sistema Turbo </span>  de Aquecimento</li>
+                        <li class="flex items-center"><svg class="w-5 h-5 mr-2 text-smart-green" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg> <span class="font-bold">Sistema Turbo</span>&nbsp;de Aquecimento</li>
                         <li class="flex items-center"><svg class="w-5 h-5 mr-2 text-smart-green" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg> Display Touch Integrado</li>
                     </ul>
                     <button onclick="showInfo('SmartBox Max')" class="mt-8 w-full bg-smart-blue text-white py-3 rounded-xl font-semibold hover:bg-blue-600 transition duration-150 ease-in-out">
